2005-07-25  Pavel Roskin  <proski@gnu.org>

	* extfs/urar.in: Remove month translation and year windowing -
	they are better handled by mc.  Use more robust date format.
	Set locale to C.

	* extfs/uzip.in: Preserve seconds.  Avoid month translation - it
	only slows down processing.

	* extfs/ualz.in: Fix compatibility with unalz 0.51.

2005-07-22  Pavel Roskin  <proski@gnu.org>

	* extfs/ualz.in: Anticipate eventual posixification of the date
	format.

2005-07-20  Pavel Roskin  <proski@gnu.org>

	* extfs/ualz.in: New file - support for ALZip archives.
	* extfs/Makefile.am: Add ualz.
	* extfs/extfs.ini: Likewise.

2005-07-06  Pavel Tsekov  <ptsekov@gmx.net>

	* tar.c (tar_read_header): Properly handle non \0 terminated tar
	entries with name of length NAMSIZ.

2005-07-05  Roland Illig  <roland.illig@gmx.de>

	* vfs.h, vfs-impl.h, vfs.c, local.h, local.c, sfs.c: Removed
	support for mmap() and munmap() from the VFS. It is unused and
	cannot be applied to remote file systems.

2005-07-03  Roland Illig  <roland.illig@gmx.de>

	* xdirentry.h: Added missing #include directives.

2005-06-21  Pavel Roskin  <proski@gnu.org>

	* extfs/u7z: New file - support for 7zip archives.
	* extfs/Makefile.am: Add u7z.
	* extfs/extfs.ini: Likewise.

	* ftpfs.c (ftpfs_get_current_directory): Warning fix - "missing
	sentinel in function call".

2005-06-08  Roland Illig  <roland.illig@gmx.de>

	* smbfs.c (free_after): Moved here from src/util.h.
	* fish.c (fish_ctl): Commented out some unused code with
	#if 0 ... #endif. This fixes a warning from SunPro.
	* mcfs.c (mcfs_get_remote_port): Shift an #endif two lines down
	to avoid a warning from SunPro.

2005-05-29  Leonard den Ottolander  <leonard * den ottolander nl>

	* ftpfs.[ch]: Added variables and assignment to allow passive
	FTP over a proxy.

2005-05-24  Roland Illig  <roland.illig@gmx.de>

	* samba/param/loadparm.c: Fixed warnings reported by gcc-2.95.
	* dirent.c (split_dir_name): Don't assign a string literal to a